2011-09-13  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_api.php: Fixed module name filtering in
	'get events' does not work correctly.

2011-09-12  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_api.php, include/api.php: added the code for to
	extract events in the android event viewer.

	* operation/events/events_list.php: cleaned source code style.

2011-09-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_reporting.php: Fixed bad condition in serialized 
	reports code.

2011-09-11  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_action_threshold.php: Added a new help file.

2011-09-08  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the array key for module name.

2011-09-08  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed in function "otherParameter2Filter" the
	simbol of timestamp comparation and separate the AND operator. And added
	2 more filters, the "limit" and the "offset".

2011-09-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/performance.php
	godmode/setup/setup_visuals.php: Added contextual help in this views.
	* include/functions_reporting.php: Now serialized reports get numeric data.

2011-09-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/setup.php: Url and Integria password are checked and 
	it is showed at advise in case of error. 

	Fixes: #3396567

2011-09-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* general/pandora_help.php: changet the text align of footer.
	
	Fixes: #3371432

2011-09-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/messages/message.php: now show more error messages in case the
	user error or group error.
	
	Fixes: #3371451

2011-09-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/extensions.php: update the style of page.
	
	Fixes: #3371523

2011-09-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
